--- a/index.html
+++ b/index.html
@@ -79,34 +79,34 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
+                    <a href="#" class="nav-item nav-link">About</a>
+                    <a href="#" class="nav-item nav-link">Services</a>
                     <a href="#" class="nav-item nav-link">Cruise</a>
                     <!-- <a href="package.html" class="nav-item nav-link">Packages</a> -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Packages</a>
                         <div class="dropdown-menu m-0">
-                            <a href="destination.html" class="dropdown-item">Dhaka Tour</a>
-                            <a href="booking.html" class="dropdown-item">Day Curise</a>
-                            <a href="team.html" class="dropdown-item">Chadpur Day Cruise</a>
-                            <a href="testimonial.html" class="dropdown-item">Bandarban</a>
-                            <a href="404.html" class="dropdown-item">Rangamati Tour</a>
+                            <a href="#" class="dropdown-item">Dhaka Tour</a>
+                            <a href="#" class="dropdown-item">Day Curise</a>
+                            <a href="#" class="dropdown-item">Chadpur Day Cruise</a>
+                            <a href="#" class="dropdown-item">Bandarban</a>
+                            <a href="#" class="dropdown-item">Rangamati Tour</a>
                         </div>
                     </div>
                     <a href="#" class="nav-item nav-link">Events</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Media</a>
                         <div class="dropdown-menu m-0">
-                            <a href="destination.html" class="dropdown-item">Destination</a>
-                            <a href="booking.html" class="dropdown-item">Booking</a>
-                            <a href="team.html" class="dropdown-item">Travel Guides</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="#" class="dropdown-item">Destination</a>
+                            <a href="#" class="dropdown-item">Booking</a>
+                            <a href="#" class="dropdown-item">Travel Guides</a>
+                            <a href="#" class="dropdown-item">Testimonial</a>
                             <a href="#" class="dropdown-item">Gallery</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="#" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary rounded-pill py-2 px-4">Membership</a>
+                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Membership</a>
             </div>
         </nav>
 
